# SteamLanguageParser

./: .gitignore  CMakeLists.txt  README.md
src/SteamLanguageParser/: CMakeLists.txt
src/SteamLanguageParser/private/: SteamLanguageParser.cpp
